--- a/work.scss
+++ b/work.scss
@@ -6,6 +6,25 @@
     background-color: #F5F5F5;
 }
 
-body {
-    border-top: 6px solid #293E68;
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: white;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+}
+.card-col {
+
+}
+.card-row {
+    padding: 1rem;
 }
