--- a/instapark.jade
+++ b/instapark.jade
@@ -215,3 +215,16 @@ html(lang="en")
                     +card("img/w_instapark/br4.jpeg", "", "Seler spot management", "How does seller manage the spots? Factors considered: (1) Improve engagement. Help the seller price spot correctly. (2) Provide good at-a-glance views so that user is engaged constantly (3) Minimize interactions (4) Optmized for sellers who are selling personal home parking spots first")
                 .col-md-4.card-col
                     +card("img/w_instapark/br9.jpeg", "", "Finding parking spots by specifying destination location", "How to design for advanced use case wherer user wants to find parking for a different location other than currently placed. Factors considered: (1) Don't make common cases hard. (2) Minimize interactions (3) Don't visually obstruct other useful information")
+                    
+        .container
+            .row
+                article.nobottompadding
+                    section
+                        h3 Interaction map
+                        
+                        p Having evaluated various alternatives and selected the best one based on application of design goals, logic and QOC analysis I prepared a wireframe of my entire application capturing all the interactions and design decisions.         
+                        
+        .container-fluid.showcase
+            .row
+                +card_no_title("img/w_instapark/imap1.png")
+            
