fix path in html

--- a/instapark.jade
+++ b/instapark.jade
@@ -212,7 +212,7 @@ html(lang="en")
                     +card("img/w_instapark/br3.jpeg", "", "Designing overall event parking flow", "Factors considered: (1) Minimize interactions to request parking (2) Make common and suggested cases very easy (3) Give options to explore deeper if needed.")
             .row.card-row
                 .col-md-4.card-col
-                    +card("img/w_instapark/br4.jpeg", "", "Seler spot management", "How does seller manage the spots? Factors considered: (1) Improve engagement. Help the seller price spot correctly. (2) Provide good at-a-glance views so that user is engaged constantly (3) Minimize interactions (4) Optmized for sellers who are selling personal home parking spots first")
+                    +card("img/w_instapark/br4.jpeg", "", "Seller spot management", "How does seller manage the spots? Factors considered: (1) Improve engagement. Help the seller price spot correctly. (2) Provide good at-a-glance views so that user is engaged constantly (3) Minimize interactions (4) Optmized for sellers who are selling personal home parking spots first")
                 .col-md-4.card-col
                     +card("img/w_instapark/br9.jpeg", "", "Finding parking spots by specifying destination location", "How to design for advanced use case wherer user wants to find parking for a different location other than currently placed. Factors considered: (1) Don't make common cases hard. (2) Minimize interactions (3) Don't visually obstruct other useful information")
                     
