Change gradient in card ... Use card instead of clickable_responsive_image

--- a/instapark.jade
+++ b/instapark.jade
@@ -71,7 +71,7 @@ html(lang="en")
         
         .container-fluid.showcase
             .row
-                +clickable_responsive_image("img/w_instapark/approach.png", "margin:0 auto;")
+                +card_no_title("img/w_instapark/approach.png", "margin:0 auto;")
                                 
         .container
             .row
@@ -105,7 +105,7 @@ html(lang="en")
                             li Facilitate park and ride
                             li Valet parking app
                         figure
-                            +clickable_responsive_image("img/w_instapark/8concepts.png")        
+                            +card_no_title("img/w_instapark/8concepts.png")        
                             
                         h3 Competitive analysis
                         
@@ -114,11 +114,11 @@ html(lang="en")
         .container-fluid.showcase
             .row
                 .col-md-4
-                    +clickable_responsive_image("img/w_instapark/c1.jpg")
+                    +card_no_title("img/w_instapark/c1.jpg")
                 .col-md-4
-                    +clickable_responsive_image("img/w_instapark/c2.jpg")
+                    +card_no_title("img/w_instapark/c2.jpg")
                 .col-md-4
-                    +clickable_responsive_image("img/w_instapark/c3.jpg")
+                    +card_no_title("img/w_instapark/c3.jpg")
 
         .container
             .row
@@ -142,9 +142,9 @@ html(lang="en")
         .container-fluid.showcase
             .row
                 .col-md-6
-                    +clickable_responsive_image("img/w_instapark/story1.png")
+                    +card_no_title("img/w_instapark/story1.png")
                 .col-md-6
-                    +clickable_responsive_image("img/w_instapark/story2.png")
+                    +card_no_title("img/w_instapark/story2.png")
                         
         .container
             .row
@@ -159,9 +159,9 @@ html(lang="en")
         .container-fluid.showcase
             .row
                 .col-md-6
-                    +clickable_responsive_image("img/w_instapark/p1.jpg")
+                    +card_no_title("img/w_instapark/p1.jpg")
                 .col-md-6
-                    +clickable_responsive_image("img/w_instapark/p2.jpg")
+                    +card_no_title("img/w_instapark/p2.jpg")
 
         .container
             .row
