--- a/tufte2.scss
+++ b/tufte2.scss
@@ -206,15 +206,17 @@ article {
     margin: 5px;
     background-color:lightgray;
     color: black;
-    background-image: linear-gradient(lightgray, antiquewhite);
+
     padding:5%;
-    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+    
+    background: -webkit-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* Chrome 10+, Saf5.1+ */ 
+    background: -moz-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* FF3.6+ */ 
+    background: linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* W3C */ 
 }
 
 article {
     section {
         margin-top: 1rem;
-//        padding-left: 2rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
