--- a/work.css
+++ b/work.css
@@ -460,28 +460,32 @@ article {
   margin: 5px;
   background-color: lightgray;
   color: black;
-  background-image: linear-gradient(lightgray, antiquewhite);
   padding: 5%;
-  box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7); }
+  background: -webkit-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%);
+  /* Chrome 10+, Saf5.1+ */
+  background: -moz-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%);
+  /* FF3.6+ */
+  background: linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%);
+  /* W3C */ }
 
-/* line 214, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 217, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Chapter Epigraphs */
   /* end chapter epigraphs styles */
   /* Links: replicate underline that clears descenders */ }
-  /* line 215, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 218, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
     margin-top: 1rem;
     padding-top: 1rem;
     padding-bottom: 1rem; }
-  /* line 221, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 223, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article ol,
   article ul,
   article dd,
   article dt {
     font-size: 1.06rem; }
-  /* line 229, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 231, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article dd,
   article dt {
@@ -491,51 +495,51 @@ article {
     margin-bottom: 0;
     padding-right: 0;
     vertical-align: baseline; }
-  /* line 245, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 247, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p, article dd {
     font-family: "ff-meta-web-pro", sans-serif !important; }
-  /* line 249, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 251, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-family: "freight-sans-pro", sans-serif !important; }
-  /* line 253, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 255, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-weight: bold; }
-  /* line 257, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 259, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p + p {
     margin-top: 0;
     text-indent: 1.86rem; }
-  /* line 262, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 264, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .firstpara {
     text-indent: inherit !important; }
-  /* line 266, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 268, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article br {
     line-height: 1.86rem; }
-  /* line 271, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 273, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 274, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 276, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
     margin-top: 1.86rem;
     margin-bottom: 1.86rem; }
-  /* line 278, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 280, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 282, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 284, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 285, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 287, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 289, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 291, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 293, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 295, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 50%;
     margin-right: 40px; }
-  /* line 297, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 299, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
     margin-top: 1.86rem;
     width: 50% !important;
@@ -543,17 +547,17 @@ article {
     text-align: right !important;
     font-family: "ff-meta-web-pro", sans-serif;
     color: inherit; }
-  /* line 305, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 307, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 311, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 313, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0;
     font-family: "ff-meta-web-pro", sans-serif; }
-  /* line 315, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 317, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -564,7 +568,7 @@ article {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 1.86rem 0 1.86rem 0; }
-  /* line 326, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 328, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -575,17 +579,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 338, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 340, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth {
     margin-top: 1.86rem; }
-  /* line 342, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 344, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 346, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 348, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 350, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 352, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -598,25 +602,25 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 366, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 368, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 371, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 373, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 372, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 374, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 379, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 381, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 389, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 391, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 393, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 395, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -630,42 +634,42 @@ article {
     vertical-align: baseline;
     position: relative;
     color: darkgray; }
-  /* line 408, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 410, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 412, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 414, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 420, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 422, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 427, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 429, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 432, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 434, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 439, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 441, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article dd,
   article dt {
     width: 50%; }
-  /* line 446, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 448, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article table {
     width: 50% !important; }
-  /* line 450, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 452, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .twocolumnlist {
     -webkit-column-count: 2;
     -moz-column-count: 2;
@@ -677,42 +681,42 @@ article {
     -ms-column-gap: 3em;
     -o-column-gap: 3em;
     column-gap: 3em; }
-  /* line 463, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 465, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .redline {
     color: red;
     background-color: yellow; }
-  /* line 468, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 470, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 473, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 475, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 478, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 480, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 483, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 485, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: white; }
-  /* line 496, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 498, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 500, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 502, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 506, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 508, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 511, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 513, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
@@ -721,75 +725,75 @@ article {
     border: none !important;
     background-color: white;
     overflow-x: auto; }
-  /* line 526, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 528, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 530, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 532, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 535, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 537, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 540, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 542, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 544, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 546, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 548, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 550, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 /* @group Desktop Only */
 @media only screen and (min-width: 1100px) and (max-width: 1920px) {
-  /* line 555, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 557, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 15px; } }
 
 /* @group Mobile, Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 562, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 564, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 569, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 571, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     width: 100%; }
-  /* line 572, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 574, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer {
     width: 100%; }
-  /* line 576, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 578, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     width: 97%; }
-  /* line 579, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 581, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article ul {
     width: 85%; }
-  /* line 582, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 584, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     max-width: 90%; }
-  /* line 585, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 587, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption,
   article figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 590, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 592, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 594, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 596, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p,
   article blockquote footer {
     width: 100%; }
-  /* line 598, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 600, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 601, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 603, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     display: none; }
-  /* line 605, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 607, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .margin-toggle:checked + .sidenote,
   article .margin-toggle:checked + .marginnote {
     display: block;
@@ -800,14 +804,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 616, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 618, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label {
     cursor: pointer; }
-  /* line 619, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 621, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper,
   article table {
     width: 85%; }
-  /* line 623, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 625, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     width: 100%; } }
 
