Lots of tiny changes

--- a/instapark.jade
+++ b/instapark.jade
@@ -201,7 +201,7 @@ html(lang="en")
                 h2.h2tufte Evaluate multiple solutions for overall app IA
             .row
                 +card("img/w_instapark/ia_alternatives.png", "", "Overall app IA", "How to design IA for overall app? All above design goals considered. 4 solutions evaluated")
-            .row(style="padding-bottom:5%;text-align:center;")
+            .row(style="padding:5%;text-align:center;")
                 h2.h2tufte Evaluate multiple solutions for different tasks.
             .row.card-row
                 .col-md-4.card-col
