--- a/tufte2.scss
+++ b/tufte2.scss
@@ -204,14 +204,14 @@ article {
 
 .showcase {
     margin: 5px;
-    background-color:lightgray;
+    background-color:white;
     color: black;
 
     padding:5%;
     
-    background: -webkit-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* Chrome 10+, Saf5.1+ */ 
-    background: -moz-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* FF3.6+ */ 
-    background: linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* W3C */ 
+//    background: -webkit-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* Chrome 10+, Saf5.1+ */ 
+//    background: -moz-linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* FF3.6+ */ 
+//    background: linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); /* W3C */ 
 }
 
 article {
