Add About page stucture

--- a/common_head.jade
+++ b/common_head.jade
@@ -16,6 +16,7 @@ mixin head_mixin(PageTitle)
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
         link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
         link(rel="stylesheet" href="work.css")
+        link(rel="stylesheet" href="imagehover.min.css")
         style.
             .navbar-default {
                 background-color: #293E68;
