--- a/graphic.jade
+++ b/graphic.jade
@@ -23,7 +23,7 @@ html(lang="en")
                 color: #293E68;
             }
 
-        +navbar_mixin(pageTitle, [["challenge","Challenge"]])
+        +navbar_mixin(pageTitle, [])
 
         .container
             .row
