--- a/common_clickable_image.jade
+++ b/common_clickable_image.jade
@@ -16,3 +16,11 @@ mixin card(image_src, style_setting, Title, Blurb)
 mixin card_no_title(image_src, style_setting)
     .card(style="padding:1rem;")
         +clickable_responsive_image(image_src, style_setting)
+        
+mixin hover_card_no_title(image_src, style_setting, hover_class, headline, fig_caption)
+    .card(style="padding:1rem;")
+        figure(class=hover_class style="background-color: #94001c;")
+            img(class="img-responsive" src=image_src style=style_setting title="Click to see enlarged image")
+            figcaption(style="background-color: #94001c;")
+                h2.h2tufte= headline
+                p.ptufte= fig_caption
