--- a/project_brief.scss
+++ b/project_brief.scss
@@ -41,6 +41,7 @@
 
 .home-project-blurb {
     font-family: $font-stack;
+    color: #707070;
 }
 
 //.home-project-brief {
@@ -52,6 +53,7 @@
 .home-project-tags {
     text-transform: uppercase;
     font-family: $font-stack;
+    color: #707070;
 }
 
 //.home-project-left {
