--- a/story.jade
+++ b/story.jade
@@ -38,18 +38,18 @@ html(lang="en")
                     br
                     h3.h3tufte After studying engineering and business management, I realized the power of applying design thinking to business innovation.
                     br
-                    h3.h3tufte Since then, I have designed for enterprise, graming and voice based interfaces &mdash; Redhat, Guardian, Callaway and  a small gaming company in Ann Arbor which is now fully funded in Kickstarter! to name a few!
+                    h3.h3tufte Since then, I have designed for enterprise, gaming and voice based interfaces &mdash; Redhat, Guardian, Callaway and  a small gaming company in Ann Arbor which is now fully funded in Kickstarter! to name a few!
                     
             .row
                 .col-md-4
-                    +hover_card_no_title("http://placehold.it/800x1600", "", "imghvr-flip-vert", "Born and brought up in delhi", "")
+                    +hover_card_no_title("https://s-media-cache-ak0.pinimg.com/736x/41/0f/d1/410fd1a10a683556668a81b3992154c9.jpg", "", "imghvr-flip-vert", "Born and brought up in delhi", "")
                     br
-                    +hover_card_no_title("http://placehold.it/800x800", "", "imghvr-flip-vert", "Strategize", "I love strategy board games which allows me to look at problems from diverse perspectives")
+                    +hover_card_no_title("https://a248.e.akamai.net/secure.meetupstatic.com/photos/theme_body/5/f/8/e/full_4044462.jpeg", "", "imghvr-flip-vert", "Strategize", "I love strategy board games which allows me to look at problems from diverse perspectives")
                 .col-md-4.center-block
-                    +hover_card_no_title("http://placehold.it/800x800", "", "imghvr-flip-vert", "Resident of Seattle", "I moved to Seattle WA in 2013 and now I call it my US hometown! I love this beautiful city!")
+                    +hover_card_no_title("http://www.silverlakevoice.com/wp-content/uploads/2015/03/VISITSEATTLE_SPACENEEDLE_FINAL-YELLOW-995x500.jpg", "", "imghvr-flip-vert", "Resident of Seattle", "I moved to Seattle WA in 2013 and now I call it my US hometown! I love this beautiful city!")
                     br
                     +hover_card_no_title("http://placehold.it/800x1600", "", "imghvr-flip-vert", "Diverse education", "My background in management and engineering enables me to understand business process and technical feasibility")
                 .col-md-4.center-block
-                    +hover_card_no_title("http://placehold.it/800x1600", "", "imghvr-flip-vert", "Michigan Wolverine", "Currently studying at University of Michigan")
+                    +hover_card_no_title("https://c1.staticflickr.com/9/8056/8127461785_0768c2012e_b.jpg", "", "imghvr-flip-vert", "Michigan Wolverine", "Currently studying at University of Michigan")
                     br
                     +hover_card_no_title("http://placehold.it/800x800", "", "imghvr-flip-vert", "Design", "I cannot live without design since the day we met!")
