--- a/common.scss
+++ b/common.scss
@@ -9,6 +9,19 @@
     text-align: center;
 }
 
+.card1 {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: white; // rgba(0,0,0,0.4);
+}
+
+/* On mouse-over, add a deeper shadow */
+.card1:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
 .selected {
     color: $color-cobaltblue;
 }
