--- a/common_head.jade
+++ b/common_head.jade
@@ -1,10 +1,12 @@
-mixin head_mixin(PageTitle)
+mixin head_mixin(PageTitle, is_work)
+    - is_work = is_work || "work";
     head
         title= PageTitle
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-        script(src="https://use.typekit.net/tpy0zci.js")
         meta(http-equiv="x-ua-compatible" content="ie=edge")
+        
+        script(src="https://use.typekit.net/tpy0zci.js")
         script(type="text/javascript").
             try {
                 Typekit.load({
@@ -12,11 +14,23 @@ mixin head_mixin(PageTitle)
                 } );
             } catch (e) {}
         script(src="https://use.fontawesome.com/a3a5e3ece9.js")
-        script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
-        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
-        link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
-        link(rel="stylesheet" href="work.css")
+        link(rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")    
+        
+        if is_work == "work"
+            script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+            script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")        
+            link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+            link(rel="stylesheet" href="work.css")
+        else
+            script(src="statemachine.js")
+            script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+            script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js")
+            script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js")
+            link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous")            
+            link(rel="stylesheet" href="index.css")
+            
         link(rel="stylesheet" href="imagehover.min.css")
+        
         style.
             .navbar-default {
                 background-color: #293E68;
