--- a/work.css
+++ b/work.css
@@ -165,15 +165,27 @@
   text-align: center; }
 
 /* line 12, /home/local/ANT/ajgopala/portfolio_new/common.scss */
+.card1 {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  background-color: white; }
+
+/* On mouse-over, add a deeper shadow */
+/* line 20, /home/local/ANT/ajgopala/portfolio_new/common.scss */
+.card1:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+
+/* line 25, /home/local/ANT/ajgopala/portfolio_new/common.scss */
 .selected {
   color: #0047AB; }
 
-/* line 16, /home/local/ANT/ajgopala/portfolio_new/common.scss */
+/* line 29, /home/local/ANT/ajgopala/portfolio_new/common.scss */
 .fa {
   color: #0047AB; }
 
 @media (min-width: 768px) {
-  /* line 21, /home/local/ANT/ajgopala/portfolio_new/common.scss */
+  /* line 34, /home/local/ANT/ajgopala/portfolio_new/common.scss */
   .site-title {
     text-align: left; } }
 
@@ -830,16 +842,16 @@ article {
   background-color: white; }
 
 /* On mouse-over, add a deeper shadow */
-/* line 17, /home/local/ANT/ajgopala/portfolio_new/work.scss */
+/* line 18, /home/local/ANT/ajgopala/portfolio_new/work.scss */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
 
 /* Add some padding inside the card container */
-/* line 22, /home/local/ANT/ajgopala/portfolio_new/work.scss */
+/* line 23, /home/local/ANT/ajgopala/portfolio_new/work.scss */
 .container {
   padding: 2px 16px; }
 
-/* line 28, /home/local/ANT/ajgopala/portfolio_new/work.scss */
+/* line 29, /home/local/ANT/ajgopala/portfolio_new/work.scss */
 .card-row {
   padding: 1rem; }
 
